# knowledge-mapper

./: .env.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  LICENSE  Makefile  README.md  codecov.yml  compose.production.yml  compose.yml
backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  manual_test_jwks.py  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 20251212_2300_add_event_sourcing_tables.py  20251212_2330_add_tenant_routing_table.py  20251213_add_documentation_entity_types.py  20251213_add_scraping_tables.py  20251213_add_user_tenant_memberships.py  20251213_create_extraction_processes_table.py  20251213_seed_default_tenants.py  20251214_1000_add_entity_canonical_columns.py  20251214_1100_add_pgvector_embedding.py  20251214_1200_add_soundex_column.py  20251214_1300_create_entity_aliases.py  20251214_1400_create_merge_review_queue.py  20251214_1500_create_merge_history.py  20251214_1600_create_consolidation_config.py  20251214_1700_add_blocking_indexes.py  20251214_1800_add_alias_original_properties.py  20251214_1900_add_job_stage_column.py  20251214_2000_create_extraction_providers.py  20251214_2100_add_job_extraction_provider.py  20251214_add_inference_tables.py  20251215_2200_entity_type_enum_to_string.py  20251215_2300_add_adaptive_extraction_columns.py  20251215_add_llm_openai_to_extraction_method.py  5ba5077f1546_add_with_check_clause_to_rls_policies_.py  e10757622a70_initial_schema_with_tenants_users_oauth_.py
backend/app/: celery_app.py  main.py  observability.py  sentry.py
backend/app/core/: __init__.py  cache.py  config.py  context.py  database.py  encryption.py  rate_limit.py  security.py
backend/app/eventsourcing/: __init__.py
backend/app/extraction/: __init__.py  base.py  circuit_breaker.py  classifier.py  factory.py  llm_extractor.py  ollama_extractor.py  openai_extractor.py  prompt_generator.py  prompts.py  rate_limiter.py  registry.py  retry.py  schema_org.py  schemas.py  strategy_router.py  worker.py
backend/app/graph/: __init__.py  client.py  queries.py
backend/app/inference/: __init__.py
backend/app/middleware/: __init__.py  security.py  tenant.py
backend/app/models/: __init__.py  consolidation_config.py  entity_alias.py  extracted_entity.py  extraction_provider.py  inference_provider.py  inference_request.py  merge_history.py  merge_review_queue.py  oauth_provider.py  scraped_page.py  scraping_job.py  tenant.py  user.py  user_tenant_membership.py
backend/app/preprocessing/: __init__.py  base.py  exceptions.py  factory.py  pipeline.py  schemas.py
backend/app/repositories/: __init__.py  extraction_provider.py
backend/app/schemas/: __init__.py  auth.py  consolidation.py  extraction_provider.py  oauth.py  scraping.py  similarity.py  tenant.py
backend/app/scraping/: __init__.py  items.py  middlewares.py  pipelines.py  runner.py  settings.py
backend/app/services/: __init__.py  app_token_service.py  embedding.py  embedding_cache.py  jwks_client.py  neo4j.py  neo4j_errors.py  neo4j_queries.py  neo4j_schema.py  neo4j_tenant.py  oauth_client.py  openai_embedding.py  sync_status.py  task_queue.py  tenant_context.py  tenant_resolver.py  token_revocation.py  vector_ops.py
backend/app/tasks/: __init__.py  consolidation.py  extraction.py  graph.py  scraping.py
backend/app/worker/: __init__.py  context.py
backend/scripts/: verify_api.py  verify_seed_data.py
backend/tests/: conftest.py  manual_test_tenant_context.py  manual_validation.py  simple_tenant_context_test.py  test_alembic_setup.py  test_health.py  test_rls_enforcement_app_user.py  test_rls_policies_manual.py  test_rls_simple.sql
backend/tests/accuracy/: __init__.py  test_extraction_accuracy.py
backend/tests/api/: __init__.py  test_database_dependency.py
backend/tests/core/: __init__.py  test_database.py
backend/tests/e2e/: __init__.py  conftest.py  test_extraction_pipeline.py
backend/tests/integration/: README.md  __init__.py  conftest.py  test_oauth_client_integration.py  test_oauth_integration.py  test_oauth_router_integration.py  test_oauth_security_validation.py  test_settings.py  test_tenant_isolation.py  test_tenant_middleware_integration.py  test_tenant_resolver_integration.py
backend/tests/models/: test_models.py
backend/tests/unit/: test_blocking_indexes.py  test_consolidation_scopes.py  test_jellyfish_import.py  test_jwks_client.py  test_oauth_client.py  test_oauth_router.py  test_pgvector_import.py  test_scope_enforcement.py  test_security.py  test_sentry.py  (+8 more)
(+361 files in other folders)
